--- a/ShellcodeLoader/ShellcodeLoaderFreshycalls/ShellcodeLoaderFreshycalls.vcxproj.filters
+++ b/ShellcodeLoader/ShellcodeLoaderFreshycalls/ShellcodeLoaderFreshycalls.vcxproj.filters
@@ -38,5 +38,11 @@
     <ClInclude Include="utils.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="resource1.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
